--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,2 +1,7 @@
-<h1>Comments#new</h1>
-<p>Find me in app/views/comments/new.html.erb</p>
+<form action="/comments" method="POST">
+	<input type="text" name="comment[content]">	
+	<input type="hidden" name="comment[user_id]" value="current_user.id">	
+	<input type="hidden" name="comment[commentable_id]" value="(specific)commentable_id">	
+	<input type="hidden" name="comment[commentable_type]" value="(specific)commentable_type">
+	<input type="submit" value="Submit">
+</form>
