--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,2 +1,15 @@
-<h1>Trips#new</h1>
-<p>Find me in app/views/trips/new.html.erb</p>
+<div id="container">
+	
+<h1>Create a new Trip</h1>
+
+<form action='/trips' method='POST'>
+	<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+	<label>Destination: <input type="text" name="destination"></label></p>
+	<label>Description of your trip: <input type="text" name="description"></label></p>
+	<input type="submit" value="Create trip">
+</form>
+
+
+
+
+</div>
