--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,2 +1,24 @@
-<h1>Trips#new</h1>
-<p>Find me in app/views/trips/new.html.erb</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Create a Trip</title>
+	<!-- Compiled and minified CSS -->
+ 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+
+	<!-- Compiled and minified JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+	<style type="text/css">
+		.row{
+			margin: 40px 10px;
+		}
+	</style>
+</head>
+<body>
+
+<div id="container">
+<h3>Create a new trip</h3>
+
+</div>
+
+</body>
+</html>
