Have access to login/reg through controller methods and NOT through homepage

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -77,6 +77,21 @@
 
     	<div class="trips">
     	<h4>My Trips</h4>	
+
+
+    	<h5>Seattle, WA</h5> <!-- Destination -->
+    	<p>Some description</p> <!-- Description -->
+    	<br>
+    	<h5>Los Angeles, CA</h5> <!-- Destination -->
+    	<p>Some description</p> <!-- Description -->
+		<br>
+    	<h5>San Diego, CA</h5> <!-- Destination -->
+    	<p>Some description</p> <!-- Description -->
+		<br>
+    	<h5>New York, NY</h5> <!-- Destination -->
+    	<p>Some description</p> <!-- Description -->
+		<br>
+
 		</div>
 
 
