--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,8 @@
 @import 'materialize';
 @import 'sessions';
 @improt 'users';
+* {
+ margin: 0;
+ padding: 0;
+ font-family: 'Comfortaa', cursive;
+}
