--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,120 +1,272 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-	<title>User Profile</title>
-	<!-- Compiled and minified CSS -->
- 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="//cdn.muicss.com/mui-0.6.0/css/mui.min.css" rel="stylesheet" type="text/css" />
+    <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
+    <script src="//cdn.muicss.com/mui-0.6.0/js/mui.min.js"></script>
+    <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+    <style>
+/**
+ * Body CSS
+ */
+html,
+body {
+  height: 100%;
+  background-color: #fffeef;
+}
 
-	<!-- Compiled and minified JavaScript -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-	<style type="text/css">
-		.row{
-			margin: 40px 10px;
-		}
-		.wrapper{
-			height: 800px;
-		}
-		.trips{
-			text-align: justify;
-		}
-	</style>
-</head>
-<body>
-
-<div id="container">
-
-	<nav class="something">
-    <div class="nav-wrapper">
-      <a href="/" class="brand-logo">Compass</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a class="waves-effect waves-light btn modal-trigger" href="/trips/new">Create a Trip</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-<div class="wrapper">
-    <div class="row">
-
-      <div class="col s3">
-        	<img class="square responsive-img" src="/assets/cap.png" alt="profile pic" />
-        	<p>Capt. America</p>
-        	<p>CaptAmerica@test.com</p>
-        	<p>Trips: 100</p>
-        	<p>Favorites: 100</p>
-      </div>
-
-      <div class="col s9">
-    	<h3>Hey, I'm Capt. America!</h3>
-    	<h5>San Diego, California, United States</h5>
-
-    	<div class="trips">
-    	<h4>My Trips</h4>	
+html,
+body,
+input,
+textarea,
+buttons {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
+}
 
 
-    	<h5>Seattle, WA</h5> <!-- Destination -->
-    	<p>Some description</p> <!-- Description -->
-    	<br>
-    	<h5>Los Angeles, CA</h5> <!-- Destination -->
-    	<p>Some description</p> <!-- Description -->
-		<br>
-    	<h5>San Diego, CA</h5> <!-- Destination -->
-    	<p>Some description</p> <!-- Description -->
-		<br>
-    	<h5>New York, NY</h5> <!-- Destination -->
-    	<p>Some description</p> <!-- Description -->
-		<br>
+/**
+ * Layout CSS
+ */
+#header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  transition: left 0.2s;
+}
 
-		</div>
+#sidedrawer {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 200px;
+  left: -200px;
+  overflow: auto;
+  z-index: 2;
+  background-color: #5F9EA0;
+  transition: transform 0.2s;
+}
+
+#content-wrapper {
+  min-height: 100%;
+  overflow-x: hidden;
+  margin-left: 0px;
+  transition: margin-left 0.2s;
+
+  /* sticky bottom */
+  margin-bottom: -160px;
+  padding-bottom: 160px;
+}
+
+#footer {
+  height: 160px;
+  margin-left: 0px;
+  transition: margin-left 0.2s;
+}
+
+@media (min-width: 768px) {
+  #header {
+    left: 200px;
+  }
+
+  #sidedrawer {
+    transform: translate(200px);
+  }
+
+  #content-wrapper {
+    margin-left: 200px;
+  }
+
+  #footer {
+    margin-left: 200px;
+  }
+
+  body.hide-sidedrawer #header {
+    left: 0;
+  }
+
+  body.hide-sidedrawer #sidedrawer {
+    transform: translate(0px);
+  }
+
+  body.hide-sidedrawer #content-wrapper {
+    margin-left: 0;
+  }
+
+  body.hide-sidedrawer #footer {
+    margin-left: 0;
+  }
+}
 
 
+/**
+ * Toggle Side drawer
+ */
+#sidedrawer.active {
+  transform: translate(200px);
+}
 
 
-      </div>
+/**
+ * Header CSS
+ */
+.sidedrawer-toggle {
+  color: #fff;
+  cursor: pointer;
+  font-size: 20px;
+  line-height: 20px;
+  margin-right: 10px;
+}
 
-    </div>
+.sidedrawer-toggle:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+
+/**
+ * Footer CSS
+ */
+#footer {
+  background-color: #5F9EA0;
+  color: #fff;
+}
+
+#footer a {
+  color: #fff;
+  text-decoration: underline;
+}
+/**
+ * Side drawer CSS
+ */
+#sidedrawer-brand {
+  padding-left: 20px;
+}
+
+#sidedrawer ul {
+  list-style: none;
+}
+
+#sidedrawer > ul {
+  padding-left: 0px;
+}
+
+#sidedrawer > ul > li:first-child {
+  padding-top: 15px;
+}
+
+#sidedrawer strong {
+  display: block;
+  padding: 15px 22px;
+  cursor: pointer;
+}
+
+#sidedrawer strong:hover {
+  background-color: #5F9EA0;
+}
+
+#sidedrawer strong + ul > li {
+  padding: 6px 0px;
+}
+    </style>
+
+
+    <script>
+jQuery(function($) {
+  var $bodyEl = $('body'),
+      $sidedrawerEl = $('#sidedrawer');
+
+
+  function showSidedrawer() {
+    // show overlay
+    var options = {
+      onclose: function() {
+        $sidedrawerEl
+          .removeClass('active')
+          .appendTo(document.body);
+      }
+    };
+
+    var $overlayEl = $(mui.overlay('on', options));
+
+    // show element
+    $sidedrawerEl.appendTo($overlayEl);
+    setTimeout(function() {
+      $sidedrawerEl.addClass('active');
+    }, 20);
+  }
+
+
+  function hideSidedrawer() {
+    $bodyEl.toggleClass('hide-sidedrawer');
+  }
+
+
+  $('.js-show-sidedrawer').on('click', showSidedrawer);
+  $('.js-hide-sidedrawer').on('click', hideSidedrawer);
+});
+var $titleEls = $('strong', $sidedrawerEl);
+
+$titleEls
+  .next()
+  .hide();
+
+$titleEls.on('click', function() {
+  $(this).next().slideToggle(200);
+});
+    </script>
+  </head>
+  <body>
+<div id="sidedrawer" class="mui--no-user-select">
+<div id="sidedrawer-brand" class="mui--appbar-line-height mui--text-title">User Name</div>
+<div class="mui-divider"></div>
+<ul>
+  <li>
+    <strong>Category 1</strong>
+    <ul>
+      <li><a href="#">Item 1</a></li>
+      <li><a href="#">Item 2</a></li>
+      <li><a href="#">Item 3</a></li>
+    </ul>
+  </li>
+</ul>
 </div>
-
-
-
-
-
-       <footer class="page-footer">
-         <div class="container">
-           <div class="row">
-             <div class="col l6 s12">
-               <h5 class="white-text">Footer Content</h5>
-               <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-             </div>
-             <div class="col l4 offset-l2 s12">
-               <h5 class="white-text">Links</h5>
-               <ul>
-                 <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                 <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                 <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                 <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-               </ul>
-             </div>
-           </div>
-         </div>
-         <div class="footer-copyright">
-           <div class="container">
-           © 2014 Copyright Text
-           <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-           </div>
-         </div>
-       </footer>
-
-
-
-
-
-
-
-
-
-
+<header id="header">
+  <div class="mui-appbar mui--appbar-line-height">
+    <div class="mui-container-fluid">
+      <a class="sidedrawer-toggle mui--visible-xs-inline-block js-show-sidedrawer">☰</a>
+      <a class="sidedrawer-toggle mui--hidden-xs js-hide-sidedrawer">☰</a>
+      <span class="mui--text-title mui--visible-xs-inline-block">User Name</span>
+    </div>
+  </div>
+</header>
+<div id="content-wrapper">
+<div class="mui--appbar-height"></div>
+<div class="mui-container-fluid">
+  <br>
+  <h1>User Name</h1>
+  <p>
+    Name: 
+  </p>
+  <p>
+    Posts:
+  </p>
+  <p>
+    Likes:
+  </p>
 </div>
-
-</body>
+</div>
+<!-- <footer id="footer">
+  <div class="mui-container-fluid">
+    <br>
+    Made with ♥ by <a href="https://www.muicss.com">MUI</a>
+  </div>
+</footer> -->
+  </body>
 </html>
