--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,7 @@
 @import 'materialize';
+@import 'trips';
 @import 'sessions';
-@improt 'users';
 * {
  margin: 0;
  padding: 0;
- font-family: 'Comfortaa', cursive;
 }
