--- a/app/views/trips/to_destination.html.erb
+++ b/app/views/trips/to_destination.html.erb
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Popular</title>
+	<title>Popular trips to <%= @destination %></title>
 </head>
 <body>
 	<div class="container">
-	
+	<div>
+		<h1>Popular trips to <%= @destination %></h1>
+	</div>
+
 	<% @trips.each do |t| %>
-		<%= t.first_name %><br>
-		<%= t.description %><br>
-		<%= t.u_likes %><br>
-		<%= t.start_date %><br>
-		<%= t.end_date %><br>
+
+	  <div class="row">
+        <div class="col s12 m7">
+          <div class="card">
+            <div class="card-image">
+              <img src="images/sample-1.jpg">
+              <span class="card-title"><%= t.description %></span>
+            </div>
+            <div class="card-content">
+              <p>By <%= t.first_name %></p>
+	      		<%= t.start_date.strftime("%B %d, %Y") %> - <%= t.end_date.strftime("%B %d, %Y") %>            </div>
+            <div class="card-action">
+              <a href="/trips/<%= t.id %>">View Itinerary</a>
+	      		<%= t.u_likes %> Likes
+            </div>
+          </div>
+        </div>
+      </div>
+
 	<% end %>
 
 
