--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -70,9 +70,8 @@ img{
 			<td><%= @trip.start_date %> => <%= @trip.end_date %></td>
 		</tr>
 	</table>
-	<div class = 'place_image'>
 	<% if @trip.picture_file_name %>
-	<%= image_tag @trip.picture.url  %></div>
+	<div class = 'place_image'><%= image_tag @trip.picture.url  %></div>
 	<% end %>
 	<form class="new_picture" id="new_picture" enctype="multipart/form-data" action="/trips/<%= @trip.id %>" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
 	    <input type = 'hidden' name = '_method' value = 'patch'>
