--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,8 @@
 @import 'materialize';
+@import 'sessions';
+@import 'users';
+* {
+ margin: 0;
+ padding: 0;
+ font-family: 'Comfortaa', cursive;
+}
