--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -2,8 +2,17 @@
 <html>
 <head>
   <title></title>
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
+  <script type="text/javascript">
+  $(document).ready(function() {
+    $('.datepicker').pickadate({
+    selectMonths: true, // Creates a dropdown to control month
+    selectYears: 15 // Creates a dropdown of 15 years to control year
+  });
+  });
+  </script>
 </head>
 <body>
 
@@ -28,7 +37,6 @@
 
 <section class="module content">
   <div class="container">
-
       <table>
         <thead>
           <tr>
@@ -48,33 +56,56 @@
               <td><%= @trip.start_date.to_date %> ~ <%= @trip.end_date.to_date %></td>
           </tr>
         </thead>
+          <% if Like.find_by(user_id: current_user.id, likeable_id: @trip.id, likeable_type: "Trip") %>
+    <form action='/likes' method='POST'>
+      <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+      <input name = "_method" value = 'delete' type = 'hidden'>
+      <input name="likeable_id" value="<%= @trip.id %>" type="hidden">
+      <input name="likeable_type" value="place" type="hidden">
+      <input type="submit" value="Unlike">
+    </form>
+  <% else %>
+    <form action='/likes' method='POST'>
+      <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+      <input name="likeable_id" value="<%= @trip.id %>" type="hidden">
+      <input name="likeable_type" value="Trip" type="hidden">
+      <input type="submit" value="Like">
+    </form>
+  <% end %>
+  <b>There are <%= Like.where(likeable_type: "Trip", likeable_id: @trip.id).count %> users who like this trip.</b>
       </table>
 
       <% if current_user.id == @trip.user_id %>
+      <center>
       <h3>Add a Place:</h3>
         <div class="row">
           <form class="col s12">
-
+            <div class="container">
+            <div class="row">
+              <div class="input-field col s12">
+                <i class="material-icons prefix">language</i>
+                <input id="icon_prefix" type="text" class="validate">
+                <label for="icon_prefix">Location</label>
+              </div><br>
+              <div class="input-field col s12">
+                <i class="material-icons prefix">mode_edit</i>
+                <input id="icon_telephone" type="tel" class="validate">
+                <label for="icon_telephone">Description</label>
+              </div>
+              <div class="input-field col s12">
+                <i class="material-icons prefix">toc</i>
+                <input id="date" type="date" class="datepicker">
+                <label for="date">Date</label>
+              </div>
+            </div>
+            </div>
+            <a class="waves-effect waves-light btn-large"><i class="material-icons right">cloud</i>button</a><br><br>
+          </form>
+        </div>
+<hr>
 <div class = "container">
 <!-- 	<h1><%= @trip.destination %></h1> -->
-	<% if Like.find_by(user_id: current_user.id, likeable_id: @trip.id, likeable_type: "Trip") %>
-		<form action='/likes' method='POST'>
-			<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
-			<input name = "_method" value = 'delete' type = 'hidden'>
-			<input name="likeable_id" value="<%= @trip.id %>" type="hidden">
-			<input name="likeable_type" value="place" type="hidden">
-			<input type="submit" value="Unlike">
-		</form>
-	<% else %>
-		<form action='/likes' method='POST'>
-			<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
-			<input name="likeable_id" value="<%= @trip.id %>" type="hidden">
-			<input name="likeable_type" value="Trip" type="hidden">
-			<input type="submit" value="Like">
-		</form>
-	<% end %>
-	<b>There are <%= Like.where(likeable_type: "Trip", likeable_id: @trip.id).count %> users who like this trip.</b>
-	<table>
+<!-- 	<table>
 		<tr>
 			<td>Description:</td>
 			<td><%= @trip.description %></td>
@@ -83,7 +114,7 @@
 			<td>Date:</td>
 			<td><%= @trip.start_date %> => <%= @trip.end_date %></td>
 		</tr>
-	</table>
+	</table> -->
 	<% count = 0 %>
 	<% @places.each do |p| %>
 	<% count += 1 %>
@@ -108,28 +139,9 @@
 	</table>
 	<% end %>
 </div>
-<footer class="page-footer">
-          <div class="container">
+<!-- <footer class="page-footer"> -->
 
-            <div class="row">
-              <div class="input-field col s12">
-                <i class="material-icons prefix">language</i>
-                <input id="icon_prefix" type="text" class="validate">
-                <label for="icon_prefix">Location</label>
-              </div><br>
-              <div class="input-field col s12">
-                <i class="material-icons prefix">mode_edit</i>
-                <input id="icon_telephone" type="tel" class="validate">
-                <label for="icon_telephone">Description</label>
-              </div>
-            </div>
-            <a class="waves-effect waves-light btn-large"><i class="material-icons right">cloud</i>button</a>
-          </form>
-        </div>
       <% end %>
-
-
-
   </div>
 </section>
 
@@ -144,5 +156,7 @@
 
   </div>
 </section>
+
+
 </body>
 </html>
