--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="//cdn.muicss.com/mui-0.6.0/css/mui.min.css" rel="stylesheet" type="text/css" />
-    
+
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
     <script src="//cdn.muicss.com/mui-0.6.0/js/mui.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
@@ -272,7 +272,7 @@ $titleEls.on('click', function() {
 <ul>
 <li><img src="/assets/cap.png" class='resizeimg'></li>
   <li>
-    <strong style="text-align: center">Jasper Pascual</strong>
+    <strong style="text-align: center"><%= current_user.first_name %> <%= current_user.last_name %></strong>
   </li>
   <li style="text-align: center">jasper@test.com</li>
 </ul>
