fixed profile page to show current user email

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -274,7 +274,7 @@ $titleEls.on('click', function() {
   <li>
     <strong style="text-align: center"><%= current_user.first_name %> <%= current_user.last_name %></strong>
   </li>
-  <li style="text-align: center">jasper@test.com</li>
+  <li style="text-align: center"><%= current_user.email %></li>
 </ul>
 </div>
 <header id="header">
