--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -82,17 +82,17 @@
             <div class="row">
               <div class="input-field col s12">
                 <i class="material-icons prefix">language</i>
-                <input id="icon_prefix" type="text" class="validate">
+                <input id="icon_prefix" type="text" class="validate" name="place[location]">
                 <label for="icon_prefix">Location</label>
               </div><br>
               <div class="input-field col s12">
                 <i class="material-icons prefix">mode_edit</i>
-                <input id="icon_telephone" type="tel" class="validate">
+                <input id="icon_telephone" type="tel" class="validate" name="place[description]">
                 <label for="icon_telephone">Description</label>
               </div>
               <div class="input-field col s12">
                 <i class="material-icons prefix">toc</i>
-                <input id="date" type="date" class="datepicker">
+                <input id="date" type="date" class="datepicker" name="place[date]">
                 <label for="date">Date</label>
               </div>
 
